--- a/bus-27seat.html
+++ b/bus-27seat.html
@@ -146,24 +146,24 @@
                                     </li>
                                        <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
                                             href="#">outstations</a>
-                                        <ul class="dropdown-menu">
+                                            <ul class="dropdown-menu">
                                             <li>
                                                 <a class="dropdown-item"
                                                     href="delhi-to-nainital-taxi-services.html">Delhi to Nainital
-                                                    Taxi</a>
+                                                    Tour</a>
                                             </li>
                                             <li>
                                                 <a class="dropdown-item"
                                                     href="delhi-to-haridwar-taxi-services.html">Delhi to Haridwar
-                                                    Taxi</a>
+                                                    Tour</a>
                                             </li>
                                             <li>
                                                 <a class="dropdown-item" href="delhi-to-manali-tour.html">Delhi to
-                                                    Manali Taxi</a>
+                                                    Manali Tour</a>
                                             </li>
                                             <li>
                                                 <a class="dropdown-item" href="delhi-to-mathura-taxi.html">Delhi to
-                                                    Mathura Taxi</a>
+                                                    Mathura Tour</a>
                                             </li>
                                             <li>
                                                 <a class="dropdown-item"
@@ -172,7 +172,7 @@
                                             </li>
                                             <li>
                                                 <a class="dropdown-item" href="outstation-car-service.html">Outstation
-                                                    Car Service</a>
+                                                    Car Service  </a>
                                             </li>
                                             <li>
                                                 <a class="dropdown-item" href="delhi-to-goldentriangle-taxi-services.html">
@@ -213,8 +213,11 @@
                                     <li class="nav-item">
                                         <a class="nav-link" href="fleets.html"> Fleets</a>
                                     </li>
-                                    <li class="nav-item">
+                                     <li class="nav-item">
                                         <a class="nav-link" href="why-us.html">why us</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="terms.html">Terms & Conditions</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="contact-us.html">contact</a>
@@ -606,7 +609,7 @@
 <p class="para">Choose this 27 Seater Bus for a hassle-free, comfortable, and reliable transport service backed by exceptional customer care and experienced drivers.</p>
 
 <div class="col-12 col-lg-6 col-md-6">
-    <img src="img/bus27.jpeg" width="70%" alt="27 Seater Bus"
+    <img src="img/bus21.jpg" width="100%" alt="27 Seater Bus"
          class="img-responsive center-block mb20">
 </div>
 <h1 class="title h-center">
