--- a/fleets.html
+++ b/fleets.html
@@ -173,24 +173,24 @@
                                     </li>
                                        <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
                                             href="#">outstations</a>
-                                        <ul class="dropdown-menu">
+                                            <ul class="dropdown-menu">
                                             <li>
                                                 <a class="dropdown-item"
                                                     href="delhi-to-nainital-taxi-services.html">Delhi to Nainital
-                                                    Taxi</a>
+                                                    Tour</a>
                                             </li>
                                             <li>
                                                 <a class="dropdown-item"
                                                     href="delhi-to-haridwar-taxi-services.html">Delhi to Haridwar
-                                                    Taxi</a>
+                                                    Tour</a>
                                             </li>
                                             <li>
                                                 <a class="dropdown-item" href="delhi-to-manali-tour.html">Delhi to
-                                                    Manali Taxi</a>
+                                                    Manali Tour</a>
                                             </li>
                                             <li>
                                                 <a class="dropdown-item" href="delhi-to-mathura-taxi.html">Delhi to
-                                                    Mathura Taxi</a>
+                                                    Mathura Tour</a>
                                             </li>
                                             <li>
                                                 <a class="dropdown-item"
@@ -199,7 +199,7 @@
                                             </li>
                                             <li>
                                                 <a class="dropdown-item" href="outstation-car-service.html">Outstation
-                                                    Car Service</a>
+                                                    Car Service  </a>
                                             </li>
                                             <li>
                                                 <a class="dropdown-item" href="delhi-to-goldentriangle-taxi-services.html">
@@ -240,8 +240,11 @@
                                     <li class="nav-item">
                                         <a class="nav-link" href="fleets.html"> Fleets</a>
                                     </li>
-                                    <li class="nav-item">
+                                     <li class="nav-item">
                                         <a class="nav-link" href="why-us.html">why us</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="terms.html">Terms & Conditions</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="contact-us.html">contact</a>
