--- a/tampu-26seat.html
+++ b/tampu-26seat.html
@@ -146,24 +146,24 @@
                                     </li>
                                        <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
                                             href="#">outstations</a>
-                                        <ul class="dropdown-menu">
+                                            <ul class="dropdown-menu">
                                             <li>
                                                 <a class="dropdown-item"
                                                     href="delhi-to-nainital-taxi-services.html">Delhi to Nainital
-                                                    Taxi</a>
+                                                    Tour</a>
                                             </li>
                                             <li>
                                                 <a class="dropdown-item"
                                                     href="delhi-to-haridwar-taxi-services.html">Delhi to Haridwar
-                                                    Taxi</a>
+                                                    Tour</a>
                                             </li>
                                             <li>
                                                 <a class="dropdown-item" href="delhi-to-manali-tour.html">Delhi to
-                                                    Manali Taxi</a>
+                                                    Manali Tour</a>
                                             </li>
                                             <li>
                                                 <a class="dropdown-item" href="delhi-to-mathura-taxi.html">Delhi to
-                                                    Mathura Taxi</a>
+                                                    Mathura Tour</a>
                                             </li>
                                             <li>
                                                 <a class="dropdown-item"
@@ -172,7 +172,7 @@
                                             </li>
                                             <li>
                                                 <a class="dropdown-item" href="outstation-car-service.html">Outstation
-                                                    Car Service</a>
+                                                    Car Service  </a>
                                             </li>
                                             <li>
                                                 <a class="dropdown-item" href="delhi-to-goldentriangle-taxi-services.html">
@@ -213,8 +213,11 @@
                                     <li class="nav-item">
                                         <a class="nav-link" href="fleets.html"> Fleets</a>
                                     </li>
-                                    <li class="nav-item">
+                                     <li class="nav-item">
                                         <a class="nav-link" href="why-us.html">why us</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="terms.html">Terms & Conditions</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="contact-us.html">contact</a>
@@ -604,7 +607,7 @@
 <p class="para">The Tempo Traveller 26 Seater is designed for very large group travels like corporate events, large family trips, and other major outings. This luxury mini-van offers exceptional space, comfort and safety amenities, paired with reliable performance on Indian roads.</p>
 <p class="para">Sanitized interiors and professional chauffeurs ensure a premium travel experience. The 26-seater comes with ample luggage capacity and modern safety features to make every journey secure and relaxing in Delhi NCR and beyond.</p>
 <div class="col-12 col-lg-12 col-md-12">
-    <img src="img/26-seater-tempo-traveller.webp" width="100%" alt="Tempo Traveller 26 Seater"
+    <img src="img/Standard-Tempo-Traveller.webp" width="30%" alt="Tempo Traveller 26 Seater"
          class="img-responsive center-block mb20">
 </div>
 <p class="para">At HSR Travel Delhi, our Tempo Traveller 26 Seater offers competitive rates with maximum comfort for large groups, ensuring your trip is hassle-free and memorable.</p>
